# pic16_backend_sim

./: Cargo.toml
programs/: TPicSim1.LST  TPicSim10.LST  TPicSim11.LST  TPicSim12.LST  TPicSim13.LST  TPicSim14.LST  TPicSim15.LST  TPicSim2.LST  TPicSim3.LST  TPicSim4.LST  TPicSim5.LST  TPicSim6.LST  TPicSim7.LST  TPicSim8.LST  TPicSim9.LST
src/: main.rs
src/emulator/: cpu.rs  data_bus.rs  mod.rs  parser.rs
working_dir/: frontend.bat
