[package]
name = "RsSim"
version = "0.1.0"
authors = ["janla"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.4"
hex = "0.4.2"
log = "0.4.8"
simple_logger = "1.6.0"
hertz = "0.3.0"
notify = "5.0.0-pre.2"